--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,974</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,809</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">API_E2E.login</td><td><a href="#m0">loginTC</a></td><td rowspan="1">1675133062259</td><td rowspan="1">3902</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">API_E2E.eCommerceE2E</td><td><a href="#m0">createProductTC</a></td><td rowspan="1">1675221569715</td><td rowspan="1">1398</td></tr><tr class="passedeven"><td><a href="#m1">deleteProductTC</a></td><td rowspan="1">1675221574262</td><td rowspan="1">852</td></tr><tr class="passedeven"><td><a href="#m2">loginTC</a></td><td rowspan="1">1675221564434</td><td rowspan="1">5272</td></tr><tr class="passedeven"><td><a href="#m3">purchaseProductTC</a></td><td rowspan="1">1675221572042</td><td rowspan="1">2214</td></tr><tr class="passedeven"><td><a href="#m4">viewProductTC</a></td><td rowspan="1">1675221571116</td><td rowspan="1">923</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">API_E2E.login#loginTC</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">API_E2E.eCommerceE2E#createProductTC</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">API_E2E.eCommerceE2E#deleteProductTC</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">API_E2E.eCommerceE2E#loginTC</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">API_E2E.eCommerceE2E#purchaseProductTC</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">API_E2E.eCommerceE2E#viewProductTC</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
