--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\mathu\AppData\Local\Temp\testng-eclipse--2069816530\testng-customsuite.xml</span>
+                    <span>C:\Users\mathu\AppData\Local\Temp\testng-eclipse--294813380\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="API_E2E.login" class="method navigator-link" hash-for-method="loginTC">loginTC</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="API_E2E.eCommerceE2E" class="method navigator-link" hash-for-method="createProductTC">createProductTC</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="API_E2E.eCommerceE2E" class="method navigator-link" hash-for-method="deleteProductTC">deleteProductTC</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="API_E2E.eCommerceE2E" class="method navigator-link" hash-for-method="loginTC">loginTC</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="API_E2E.eCommerceE2E" class="method navigator-link" hash-for-method="purchaseProductTC">purchaseProductTC</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="API_E2E.eCommerceE2E" class="method navigator-link" hash-for-method="viewProductTC">viewProductTC</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,9 +141,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">API_E2E.login</span>
+              <span class="class-name">API_E2E.eCommerceE2E</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="createProductTC">
+                  </a> <!-- createProductTC -->
+                  <span class="method-name">createProductTC</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="deleteProductTC">
+                  </a> <!-- deleteProductTC -->
+                  <span class="method-name">deleteProductTC</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="loginTC">
@@ -131,12 +165,26 @@
                   <span class="method-name">loginTC</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="purchaseProductTC">
+                  </a> <!-- purchaseProductTC -->
+                  <span class="method-name">purchaseProductTC</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="viewProductTC">
+                  </a> <!-- viewProductTC -->
+                  <span class="method-name">viewProductTC</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mathu\AppData\Local\Temp\testng-eclipse--2069816530\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\mathu\AppData\Local\Temp\testng-eclipse--294813380\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +193,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;API_E2E.login&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;loginTC&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- API_E2E.login --&gt;
+      &lt;class name=&quot;API_E2E.eCommerceE2E&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,16 +233,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginTC')
-data.setCell(0, 2, 'API_E2E.login')
-data.setCell(0, 3, 3902);
+data.setCell(0, 2, 'API_E2E.eCommerceE2E')
+data.setCell(0, 3, 5272);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'purchaseProductTC')
+data.setCell(1, 2, 'API_E2E.eCommerceE2E')
+data.setCell(1, 3, 2214);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'createProductTC')
+data.setCell(2, 2, 'API_E2E.eCommerceE2E')
+data.setCell(2, 3, 1398);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'viewProductTC')
+data.setCell(3, 2, 'API_E2E.eCommerceE2E')
+data.setCell(3, 3, 923);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'deleteProductTC')
+data.setCell(4, 2, 'API_E2E.eCommerceE2E')
+data.setCell(4, 3, 852);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,10 +284,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">API_E2E.login</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">API_E2E.eCommerceE2E</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">loginTC</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">createProductTC</span>
+                <span class="method-start">5281 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">viewProductTC</span>
+                <span class="method-start">6682 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">purchaseProductTC</span>
+                <span class="method-start">7608 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">deleteProductTC</span>
+                <span class="method-start">9828 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
